Improve layout issues

--- a/src/Components/Tooltip/_tooltip.scss
+++ b/src/Components/Tooltip/_tooltip.scss
@@ -1,9 +1,5 @@
 /* Tooltip */
-/*
-.tooltip {
-	display: none;
-}
-*/
+
 
 .viewerWindowContent .tooltip {
 	font-family: $font-stack;
@@ -26,26 +22,3 @@
 	transition: all .25s ease-out;
 	width: 50%;
 }
-
-
-/*
-.viewerWindowContent .tooltip:before {
-	border-left: solid transparent 10px;
-	border-right: solid transparent 10px;
-	border-top: solid rgba(0,0,0,0.7) 10px;
-	bottom: -10px;
-	content: " ";
-	height: 0;
-	left: 50%;
-	margin-left: -13px;
-	position: absolute;
-	width: 0;
-}
-
-
-.description:hover .tooltip {
-	opacity: 1;
-	pointer-events: auto;
-	transform: translateY(0px);
-}
-*/
