--- a/src/Components/ViewerWindowContent/_mobileDefaultViewerWindowContent.scss
+++ b/src/Components/ViewerWindowContent/_mobileDefaultViewerWindowContent.scss
@@ -1,6 +1,7 @@
 /* defaultViewerWindowContent */
 
 .defaultViewerWindowContent {
+	min-height: inherit;
 	margin: 20px 15px;
 }
 
